# backend/routes/seoRoutes.js
@@ -1,6 +1,7 @@
 import express from 'express';
 import {
   getCategorySeo,
+  getProductFeed,
   getProductSeo,
   getRobots,
   getSitemap,
@@ -12,5 +13,6 @@ router.get('/product/:id', getProductSeo);
 router.get('/category/:slug', getCategorySeo);
 router.get('/sitemap.xml', getSitemap);
 router.get('/robots.txt', getRobots);
+router.get('/product-feed.xml', getProductFeed);
 
 export default router;
